# wh04-1st-1team-nomingyu

./: .gitignore  Main.py  README.md  db.json  pyproject.toml
pages/: 1_Transport.py  2_OTT.py  3_Job.py  4_Shoes.py
