[project]
name = "wh04-1st-1team-nomingyu"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vhzkclq0705", email = "vhzkclq0705@naver.com"},
]
dependencies = ["streamlit>=1.42.1", "pandas>=2.2.3", "matplotlib>=3.10.0", "folium>=0.19.4", "streamlit-folium>=0.24.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
eda = [
    "jupyterlab>=4.3.5",
]
test = [
    "pytest>=8.3.4",
]
